[tool.poetry]
name = "clsapi"
version = "0.1.0"
description = "CLSim API"
authors = ["Milton Abrunhosa <ml_byteman@yahoo.com.br>"]
license = "CC0 1.0 Universal"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.950"
pylint = "^2.13.7"
autopep8 = "^1.6.0"
types-requests = "^2.27.24"
flake8 = "^4.0.1"
pytest-coverage = "^0.0"
pip-audit = "^2.1.1"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
